modify left search bar

--- a/src/main/webapp/WEB-INF/activity/search-activities.html
+++ b/src/main/webapp/WEB-INF/activity/search-activities.html
@@ -152,7 +152,7 @@
 												<h4>
 													<a href="#where" data-bs-toggle="collapse" aria-expanded="false"
 														role="button" class="collapsed">縣市<span
-															class="selected">選擇</span></a>
+															class="selected city-selected">選擇</span></a>
 												</h4>
 
 											</div>
@@ -164,121 +164,121 @@
 															<div class="inner_widget_link">
 																<ul class="no-ul-list filter-list">
 																	<li class="form-check">
-																		<input id="b1" class="form-check-input"
+																		<input id="1" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b1"
 																			class="form-check-label">基隆市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b1" class="form-check-input"
+																		<input id="2" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b1"
 																			class="form-check-label">台北市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b2" class="form-check-input"
+																		<input id="3" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b2"
 																			class="form-check-label">新北市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b3" class="form-check-input"
+																		<input id="4" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b3"
 																			class="form-check-label">桃園市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b4" class="form-check-input"
+																		<input id="5" class="form-check-input"
 																			name="where" type="radio" checked>
 																		<label for="b4"
 																			class="form-check-label">新竹市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b5" class="form-check-input"
+																		<input id="6" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b5"
 																			class="form-check-label">新竹縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b6" class="form-check-input"
+																		<input id="7" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b6"
 																			class="form-check-label">苗栗縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b7" class="form-check-input"
+																		<input id="8" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b7"
 																			class="form-check-label">台中市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b8" class="form-check-input"
+																		<input id="9" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b8"
 																			class="form-check-label">彰化縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="10" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">南投縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="11" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">雲林縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="12" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">嘉義市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="13" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">嘉義縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="14" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">台南市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="15" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">高雄市</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="16" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">屏東縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="17" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">宜蘭縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="18" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">花蓮縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="19" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">臺東縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="20" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">澎湖縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="21" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">金門縣</label>
 																	</li>
 																	<li class="form-check">
-																		<input id="b9" class="form-check-input"
+																		<input id="22" class="form-check-input"
 																			name="where" type="radio">
 																		<label for="b9" class="form-check-label">連江縣</label>
 																	</li>
@@ -296,7 +296,7 @@
 												<h4>
 													<a href="#fptype" data-bs-toggle="collapse" aria-expanded="false"
 														role="button" class="collapsed">活動種類<span
-															class="selected">選擇</span></a>
+															class="selected category-selected">選擇</span></a>
 												</h4>
 
 											</div>
