--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -43,9 +43,9 @@
 							<div class="card-body pt-0">
 								<div class="inner_widget_link">
 									<ul class="no-ul-list navigation-list">
-										<li><a href="./member-details.html">個人資料</a></li>
-										<li><a href="./member-addresses.html">我的地址</a></li>
-										<li><a href="./member-change-password.html">更改密碼</a></li>
+										<li><a href="http://localhost:8080/chill-tribe/member/member-details.html">個人資料</a></li>
+										<li><a href="http://localhost:8080/chill-tribe/member/member-addresses.html">我的地址</a></li>
+										<li><a href="http://localhost:8080/chill-tribe/member/member-change-password.html">更改密碼</a></li>
 									</ul>
 								</div>
 							</div>
@@ -101,7 +101,7 @@
 							<div class="card-body pt-0">
 								<div class="inner_widget_link">
 									<ul class="no-ul-list navigation-list">
-										<li><a href="./favorite.html">我的收藏</a></li>
+										<li><a href="http://localhost:8080/chill-tribe/member/favorite.html">我的收藏</a></li>
 									</ul>
 								</div>
 							</div>
