--- a/src/main/webapp/WEB-INF/activity/search-activities.html
+++ b/src/main/webapp/WEB-INF/activity/search-activities.html
@@ -742,6 +742,7 @@
 	<!-- ============================================================== -->
 	<script src="../vendors/jquery/jquery-3.7.1.min.js"></script>
 	<!-- 自己刻 -->
+	<script src="../core/constant.js"></script> 
 	<script src="js/activity-search.js"></script>
 	<!-- 自己刻↑ -->
 
