--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -160,10 +160,10 @@
 // 					member_header_photo_base64.src = 'https://placehold.co/500x500';
 // 					member_header_photo_base64.src = 'https://imgur.com/a/jDrbFs9';
 					member_header_photo_base64.src = 'http://localhost:8080/chill-tribe/activity/asset/no-image.jpg';
-					console.log("照片是空的");
+// 					console.log("照片是空的");
 				} else {
 					member_header_photo_base64.src = 'data:image/png;base64,' + member.photobase64;
-					console.log("77777有照片囉");
+// 					console.log("77777有照片囉");
 				}
 
 				if (member.membername != null) {
