--- a/src/main/webapp/WEB-INF/member/member-details.html
+++ b/src/main/webapp/WEB-INF/member/member-details.html
@@ -230,7 +230,7 @@
 		fetch(`http://localhost:8080/chill-tribe/member/find/${memberid}`)
 			.then(resp => resp.json())
 			.then(member => {
-				console.log(member);
+// 				console.log(member);
 				// 			member_id.value = member.memberid;
 				membername.value = member.membername;
 				email.value = member.email;
