--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -159,17 +159,16 @@
 		// fetch(`find/${img_member_id.value}`)
 		.then(resp => resp.json())
 		.then(member => {
-			console.log(member);
+// 			console.log(member);
 			member_id.value = member.memberid;
 			img_member_id.value = member.memberid;
 			if (member.photobase64 == null) {
 // 				photo_base64.src = 'https://placehold.co/500x500';
 				photo_base64.src = '../activity/asset/no-image.jpg';
-				
-				console.log("照片是空的");
+// 				console.log("照片是空的");
 			} else {
 				photo_base64.src = 'data:image/png;base64,' + member.photobase64;
-				console.log("77777有照片囉");
+// 				console.log("77777有照片囉");
 			}
 
 		});
@@ -204,7 +203,7 @@
 
 		const img_member_id = document.querySelector('#img_member_id');
 		//         const member_id = document.getElementById('member_id');
-		console.log(img_member_id.value);
+// 		console.log(img_member_id.value);
 
 		fetch(`http://localhost:8080/chill-tribe/member/memberimg`, {
 // 		fetch('memberimg', {
