--- a/src/main/webapp/WEB-INF/order/order-info.html
+++ b/src/main/webapp/WEB-INF/order/order-info.html
@@ -302,6 +302,7 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/qrcanvas@3"></script>
 
+	<script src="../core/constant.js"></script>
 	<script src="./js/order-info.js"></script>
 
 
