--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -28,7 +28,7 @@
                 class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="../activity/search-activities.html">活動列表<span class="submenu-indicator"></span></a>
+        <li><a href="../activity/search-activities.html?search-activity-name=&category=all&region=all">活動列表<span class="submenu-indicator"></span></a>
 
         </li>
 
