--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -40,7 +40,7 @@
 						href="../chilltribe.html">首頁<span class="submenu-indicator"></span></a></li>
 
 					<li><a id="index_href_search-activities"
-						href="../activity/search-activities.html">活動列表<span
+						href="../activity/search-activities.html?search-activity-name=&category=all&region=all">活動列表<span
 							class="submenu-indicator"></span></a></li>
 
 					<li><a id="index_href_contact"
