--- a/src/main/webapp/WEB-INF/member/forgot-password.html
+++ b/src/main/webapp/WEB-INF/member/forgot-password.html
@@ -168,6 +168,7 @@
 <!-- <script src="./_html/assets/js/loginmodal.js"></script> -->
 <!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
 <script src="./js/loginmodal.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- ============================================================== -->
 <!-- This page plugins -->
 <!-- ============================================================== -->
@@ -184,6 +185,11 @@
 				email: forgetpassword_email.value
 			}),
 		})
+		Swal.fire({
+				icon: "success",
+				title: "成功",
+				text: "已重製密碼，請去信箱收信！",
+			})
 	});
 </script>
 
