--- a/src/main/webapp/WEB-INF/member/member-register.html
+++ b/src/main/webapp/WEB-INF/member/member-register.html
@@ -206,6 +206,7 @@
 	<!-- <script src="./_html/assets/js/loginmodal.js"></script> -->
 	<!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
 	<script src="./js/loginmodal.js"></script>
+	<script src="../core/constant.js"></script>
 	<!-- 註冊JS開始 -->
 	<script src="./js/member-register.js"></script>
 	<!-- 註冊JS結束 -->
