--- a/src/main/webapp/WEB-INF/member/member-change-password.html
+++ b/src/main/webapp/WEB-INF/member/member-change-password.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>ChillTribe - 更改密碼</title>
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
 
 	<!-- Custom CSS -->
 	<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -166,6 +167,7 @@
 	<script src="../Full_Resido/_html/assets/js/lightbox.js"></script>
 	<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="../core/constant.js"></script>
 
 	<script>
 		// navbar load
@@ -215,7 +217,7 @@
 				});
 			};
 
-			fetch(`http://localhost:8080/chill-tribe/member/membereditpassword`, {
+			fetch(`${APP_CONFIG.BASE_URL}member/membereditpassword`, {
 				method: 'PUT',
 				headers: {
 					'Content-Type': 'application/json'
@@ -231,24 +233,34 @@
 				})
 				.then(body => {
 					const { successful, errMsg } = body;
-					if (body.successful) {
+					if (successful) {
 						console.log("恭喜，密碼修改成功囉！！！");
 						Swal.fire({
 							icon: "success",
 							title: "恭喜",
 							text: "密碼修改成功囉！",
-						});
-					}else {
-						console.log("OH~NO...您密碼修改失敗了！！！");
-						Swal.fire({
-							icon: "error",
-							title: "Oh...糟糕",
-							text: "密碼修改失敗...",
+						}).then(() => {
+							sessionStorage.clear();
+							localStorage.clear();
+							fetch(`${APP_CONFIG.BASE_URL}member/logout`, {
+								method: 'DELETE'
+							})
+								.then(response => {
+									if (response.ok) {
+										window.location.href = `${APP_CONFIG.BASE_URL}chilltribe.html`;
+									} else {
+										console.log("OH~NO...您密碼修改失敗了！！！");
+										Swal.fire({
+											icon: "error",
+											title: "Oh...糟糕",
+											text: "密碼修改失敗...",
+										});
+									}
+								});
 						});
 					}
 				});
-		});
-
+				});
 
 	</script>
 
