--- a/src/main/webapp/WEB-INF/member/forgot-password.html
+++ b/src/main/webapp/WEB-INF/member/forgot-password.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>ChillTribe - 忘記密碼</title>
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
 
 	<!-- Custom CSS -->
 	<!-- <link href="./_html/assets/css/styles.css" rel="stylesheet"> -->
@@ -169,6 +170,7 @@
 <!-- <script src="../Full_Resido/_html/assets/js/loginmodal.js"></script> -->
 <script src="./js/loginmodal.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="../core/constant.js"></script>
 <!-- ============================================================== -->
 <!-- This page plugins -->
 <!-- ============================================================== -->
@@ -176,7 +178,7 @@
 <script>
 	$('#btn_forgetpassword').on("click", function () {
 		console.log("忘記密碼按鈕觸發");
-		fetch(`http://localhost:8080/chill-tribe/member/forgetpassword`, {
+		fetch(`${APP_CONFIG.BASE_URL}member/forgetpassword`, {
 			method: 'PUT',
 			headers: {
 				'Content-Type': 'application/json'
