--- a/src/main/webapp/WEB-INF/member/member-add-address.html
+++ b/src/main/webapp/WEB-INF/member/member-add-address.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>ChillTribe - 一般會員新增地址</title>
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
 
 	<!-- Custom CSS -->
 	<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -171,6 +172,7 @@
 	<script src="../Full_Resido/_html/assets/js/slider-bg.js"></script>
 	<script src="../Full_Resido/_html/assets/js/lightbox.js"></script>
 	<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
+	<script src="../core/constant.js"></script>
 
 	<script>
 		// navbar load
@@ -233,7 +235,7 @@
 
 
 
-			fetch('memberaddress', {
+			fetch(`${APP_CONFIG.BASE_URL}member/memberaddress`, {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json'
@@ -261,6 +263,11 @@
 							icon: "success",
 							title: "成功",
 							text: "恭喜您，新增地址成功囉！",
+							  confirmButtonText: '確定',
+							}).then((result) => {
+							  if (result.isConfirmed) {
+							    window.location.href = `${APP_CONFIG.BASE_URL}member/member-addresses.html`;
+							  }
 						});
 					} else {
 						Swal.fire({
