--- a/src/main/webapp/WEB-INF/member/member-register.html
+++ b/src/main/webapp/WEB-INF/member/member-register.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>ChillTribe - 一般會員註冊</title>
+	<link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
 
 	<!-- Custom CSS -->
 	<!-- <link href="./_html/assets/css/styles.css" rel="stylesheet"> -->
