--- a/src/main/webapp/WEB-INF/supplier/supplierIndex.html
+++ b/src/main/webapp/WEB-INF/supplier/supplierIndex.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>供應商後台</title>
+  <link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
