update Logoimg URL

--- a/src/main/webapp/WEB-INF/member/login.html
+++ b/src/main/webapp/WEB-INF/member/login.html
@@ -14,7 +14,7 @@
 		<div class="modal-body">
 			<h4 class="modal-header-title">登入</h4>
 			<div class="d-flex align-items-center justify-content-center mb-3">
-			<img src="http://localhost:8080/chill-tribe/star-logo-nobg.png"style="width: 40px; height: 40px;">
+			<img src="${APP_CONFIG.BASE_URL}star-logo-nobg.png"style="width: 40px; height: 40px;">
 <!-- 				<span class="svg-icon text-primary svg-icon-2hx"> <svg width="80" height="80" viewBox="0 0 24 24" -->
 <!-- 						fill="none" xmlns="http://www.w3.org/2000/svg"> -->
 <!-- 						<path -->
