--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -1,6 +1,6 @@
 <div class="nav-header">
     <a class="nav-brand text-logo" id="member_logo_href" href="/chilltribe.html">
-        <img src="http://localhost:8080/chill-tribe/star-logo-nobg.png" style="width: 40px; height: 40px;"/>
+        <img src="${APP_CONFIG.BASE_URL}star-logo-nobg.png" style="width: 40px; height: 40px;"/>
         <h5 class="fs-3 fw-bold ms-1 my-0">ChillTribe</h5>
     </a>
     <div class="nav-toggle"></div>
@@ -73,7 +73,7 @@
                          alt="">您好！<span id="member_name"> </span>
                 </button>
                 <div class="dropdown-menu pull-right animated flipInX" id="showing">
-                    <a href="http://localhost:8080/chill-tribe/member/member-details.html"><i
+                    <a href="${APP_CONFIG.BASE_URL}member/member-details.html"><i
                             class="fa-solid fa-gauge"></i>個人資料</a>
                     <a href=" " id="btn_logout"><i class="fa-solid fa-power-off"></i>登出</a>
                 </div>
