--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
         <title>ChillTribe - 活動細節</title>	
-		
+				<link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+				<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
         <!-- Custom CSS -->
         <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 		
