--- a/src/main/webapp/WEB-INF/supplier/supplierIndex.html
+++ b/src/main/webapp/WEB-INF/supplier/supplierIndex.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>供應商後台</title>
-  <link rel="shortcut icon" href="/chill-tribe/star-logo-nobg.png" type="image/png">
+  <link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+	<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -233,10 +234,6 @@
 <!-- <script src="../dist/js/adminlte.js"></script> -->
 <script src="../admin/dist/js/adminlte.js"></script>
 
-<!-- AdminLTE for demo purposes -->
-<!-- <script src="../dist/js/demo.js"></script> -->
-<!-- <script src="../dist/js/demo-ernie.js"></script> -->
-<script src="./js/demo-ernie.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <!-- <script src="../dist/js/pages/dashboard.js"></script> -->
 <script src="../admin/dist/js/pages/dashboard.js"></script>
