--- a/src/main/webapp/WEB-INF/supplier/suppliers-intro.html
+++ b/src/main/webapp/WEB-INF/supplier/suppliers-intro.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
         <title>ChillTribe - 供應商資料</title>	
-		
+				<link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+				<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+				
         <!-- Custom CSS -->
         <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 		
@@ -205,5 +207,6 @@
 		<!-- This page plugins -->
 		<!-- ============================================================== -->
 		<script src="./js/suppliers-intro.js"></script>
+		<script src="http://localhost:8080/chill-tribe/core/constant.js"></script>
 	</body>
 </html>
