--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -585,6 +585,7 @@
 		<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
 		 
 		<script src="../Full_Resido/_html/assets/js/custom.js"></script>
+		<script src="http://localhost:8080/chill-tribe/core/constant.js"></script>
 
 		<!----- Navigation ----->
 		<script>
