--- a/src/main/webapp/WEB-INF/general-info/contact.html
+++ b/src/main/webapp/WEB-INF/general-info/contact.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
         <title>Resido - Residence & Real Estate HTML Template</title>	
-		
+				<link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+				<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+				
         <!-- Custom CSS -->
         <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 		
