--- a/src/main/webapp/WEB-INF/supplier/activityList.html
+++ b/src/main/webapp/WEB-INF/supplier/activityList.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ChillTribe - 個別供應商活動列表</title>
+  <link rel="icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
+	<link rel="shortcut icon" href="http://localhost:8080/chill-tribe/star-logo-nobg.png" type="image/png">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -445,5 +447,6 @@
     }
   });
 </script>
+<script src="http://localhost:8080/chill-tribe/core/constant.js"></script>
 </body>
 </html>
