--- a/src/main/webapp/WEB-INF/order/order-form.html
+++ b/src/main/webapp/WEB-INF/order/order-form.html
@@ -259,6 +259,7 @@
 		$('#login').load('../member/login.html');
 	</script>
 
+	<script src="../core/constant.js"></script>
 	<script src="./js/order-form.js"></script>
 
 
