--- a/src/main/webapp/WEB-INF/order/order-lists.html
+++ b/src/main/webapp/WEB-INF/order/order-lists.html
@@ -230,6 +230,7 @@
 	</script>
 
 	<!-- ============================自定義js============================== -->
+	<script src="../core/constant.js"></script>
 	<script src="./js/order-lists.js"></script>
 
 </body>
