--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -1426,7 +1426,7 @@
     <script src="vendors/jquery/jquery-3.7.1.min.js"></script>
 
     <!-- 自己刻 -->
-    <script src="core/constant.js"></script>
+    <script src="./core/constant.js"></script>
     <script src="activity/js/index.js"></script>
     <!-- 自己刻↑ -->
 
@@ -1460,7 +1460,7 @@
         $('#footer').load('member/footer.html');
 
         // 載入 login.html
-        $('#login').load('member/login.html');
+        $('#login').load('member/fixed-member-login.html');
     </script>
     <script>
         // Background image ------------------
